--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 35.7vh;
+    height: 200px;
     background: url("images/burger.jpg");
     background-repeat: no-repeat;
     background-position: center center;
@@ -68,8 +68,8 @@ body {
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 14px;
     font-weight: 400;
-    padding-left: 10px;
-    padding-top: 10px;
+    /*padding-left: 10px;
+    padding-top: 10px;*/
     flex-basis: 50vw;
     text-align: left;
 
@@ -80,69 +80,198 @@ body {
     font-family: Source Sans Pro;
     font-size: 14px;
     font-weight: 400;
-    padding-right: 10px;
-    padding-top: 10px;
+    /*padding-right: 10px;
+    padding-top: 10px;*/
     flex-basis: 50vw;
     text-align: right;
     align-self: flex-start;
 }
 
-.recept-nazev {
-    font-family: Raleway;
-    font-weight: 800;
-    font-size: 28px;
-    padding-left: 10px;
-    /*padding-bottom: 10px;*/
-    flex-basis: 100vw;
-    text-align: left;
-    vertical-align: bottom;
-    
-    
-        
- }
+/* umístění textu uvnitř rámečku */
 
-
-/*.hlavni-recept {
+.hlavni-recept,
+.recept {
+    padding: 10px;
     display: flex;
-    flex-wrap: wrap;
-    height: 35.7vh;
-    background: url("images/burger.jpg");
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
-    border-top: 1px solid whitesmoke;
+    flex-direction: column;
+    justify-content: space-between;
+}
 
-    
-}*/
+.recept-meta {
+    display: flex;
+    justify-content: space-between;
+}
+
+/* stylováni textu uvnitř fotočtverečku */
+
+.recept-nazev {
+    font-family: 'Raleway', sans-serif;
+    margin: 0;
+    font-weight: 800;
+    color: white;
+    text-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
+}
+
+.recept-meta {
+    font-size: 14px;
+    font-weight: 400;
+    color: white;
+}
+
+.hlavni-recept .recept-nazev {
+    font-size: 28px;
+}
+
+.recept .recept-nazev {
+    font-size: 18px;
+}
+
 
 .recept2 {
-    height: 16vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 90px;
     background: url("images/sushi.jpg");
     background-position: center center;
     background-size: cover;
     border-top: 1px solid whitesmoke;
+    padding: 10px;
 }
 
 .recept3 {
-    height: 16vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 90px;
     background: url("images/kure.jpg");
     background-position: center center;
     background-size: cover;
     border-top: 1px solid whitesmoke;
+    padding: 10px;
 }
 
 .recept4 {
-    height: 16vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height:90px;
     background: url("images/rajcata.jpg");
     background-position: center center;
     background-size: cover;
     border-top: 1px solid whitesmoke;
+    padding: 10px;
 }
 
 .recept5 {
-    height: 16vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 90px;
     background: url("images/grilovani.jpg");
     background-position: center center;
     background-size: cover;
     border-top: 1px solid whitesmoke;
+    padding: 10px;
 }
+
+@media (min-width: 480px) {
+    .recepty {
+        display: flex;
+        flex-direction: row;
+        flex: 1 1 50%;
+        flex-wrap: wrap;
+    }
+    .hlavni-recept{
+        padding: 20px;
+        height: 250px;
+    }
+    .recept2,
+    .recept3,
+    .recept4,
+    .recept5 {
+        width: 50vw;
+        padding: 20px;
+        height: 150px;
+    }
+    .recept3 {
+        border-left: 1px solid whitesmoke;
+    }
+    .recept5 {
+        border-left: 1px solid whitesmoke;
+    }
+    .hlavni-recept .recept-nazev {
+        font-size: 36px;
+    }
+    
+    .recept .recept-nazev {
+        font-size: 22px;
+    }
+    }
+    /*.recept3 {
+        width: 50vw;
+    }
+    .recept4 {
+        width: 50vw;
+    }
+    .recept5 {
+        width: 50vw;
+    }*/
+    
+@media (min-width: 860px) {
+        .nabidka {
+            display: flex;
+            flex-direction: row;
+            flex: 1 1 33.3%;
+            flex-wrap: wrap;
+
+
+        }
+
+        .recepty {
+            display: flex;
+            /*flex-direction: column;*/
+            flex: 1 1 33.3%;
+            flex-wrap: wrap;
+        }    
+
+       .hlavni-recept {
+            width: 33.3vw;
+            padding: 20px;
+            border-top: none;
+            border-right: 1px solid whitesmoke;
+            height: 400px;
+        }
+
+        .recept2,
+        .recept3,
+        .recept4,
+        .recept5 {
+            width: 33.3vw;
+            padding: 20px;
+            height: 200px;
+        }
+
+        .recept2 {
+            border-top: none;
+        }
+        .recept3 {
+            border-top: none;
+            border-left: 1px solid whitesmoke;
+        }
+
+        .recept5 {
+            border-left: 1px solid whitesmoke;
+        }
+
+        .hlavni-recept .recept-nazev {
+            font-size: 48px;
+        }
+        
+        .recept .recept-nazev {
+            font-size: 28px;
+        }
+
+
+
+    }
